ai-nutlope-llamacoder/kustomization/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-nutlope-llamacoder
  namespace: ai-nutlope-llamacoder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-nutlope-llamacoder
  template:
    metadata:
      annotations:
      labels:
        app: ai-nutlope-llamacoder
    spec:
      containers:
        - name: main
          image: minixxie/nutlope-llamacoder:1faa464713cc83ed3ae6b6fde3b5f44bf77f98da
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80  # HTTP port
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
